--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #1434CB;
     --color-dark-navy: #0F172A;
-    --primary-hover-color: #1434CB;
+    --primary-hover-color: #01D1EE;
     --primary-stroke: #D3DDFD;
     --light-heading: #484848;
     --light-paragraph: #333;
@@ -1732,11 +1732,11 @@ footer {
     }
 
     .navbar-list > li:hover {
-        color: var(--primary-color);
+        color: var(--primary-hover-color);
     }
 
     .navbar-list > li:hover svg {
-        stroke: var(--primary-color);
+        stroke: var(--primary-hover-color);
         transform: rotate(180deg);
     }
 
@@ -1773,11 +1773,11 @@ footer {
     }
 
     .navbar-list > li:hover .nav-link {
-        color: var(--primary-color);
+        color: var(--primary-hover-color);
     }
 
     .navbar-list > li:hover svg {
-        stroke: var(--primary-color);
+        stroke: var(--primary-hover-color);
         transform: rotate(180deg);
     }
 
